changed a default display

--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
         </div>
     </div>
     <script src="code.js"></script>
-    <script src="converter.js"></script>
+    <script src="converting.js"></script>
 </body>
 </html>
